# CryoGEM

./: .flake8  .gitignore  MANIFEST.in  README.md  pyproject.toml  versions.txt
cryogem/: __init__.py  __main__.py  _version.py  config.py  cryogem.py  fft.py  filter.py  lie_tools.py  losses.py  micrograph.py  options.py  transform.py  utils.py  utils_gen_data.py  visualizer.py
cryogem/commands/: analysis_fspace.py  esti_ice.py  gallery.py  gen_data.py  test.py  train.py  video.py
cryogem/datasets/: __init__.py  base_dataset.py  cryogem_dataset.py  template_dataset.py
cryogem/inference/: protein.py  utils_infer.py
cryogem/models/: __init__.py  base_model.py  cryogem_model.py  networks.py  template_model.py
genem/: __init__.py  __main__.py  _version.py  config.py  ctf.py  filter.py  genem.py  html_helper.py  loader.py  metrics.py  options.py  starfile.py  transform.py  utils.py  utils_gen_data.py  visualizer.py
genem/commands/: analysis_fspace.py  esti_ice.py  gallery.py  gen_data.py  test.py  train.py  video.py
genem/datasets/: __init__.py  genem_dataset.py  image_folder.py  template_dataset.py
genem/inference/: config_infer.py  protein.py  utils_infer.py
genem/models/: __init__.py  base_model.py  genem_model.py  networks.py
testing/: empiar-10028.ipynb
